    "DB_ENV->get_lg_bsize()", "DB_ENV->get_lg_dir()",
    "DB_ENV->get_lg_filemode()", "DB_ENV->set_lg_filemode()",
    "DB_ENV->get_lk_detect()", "DB_ENV->get_lg_regionmax()",
    "DB_ENV->get_lk_max_lockers()", "DB_ENV->set_lk_max_locks()",
    "DB_ENV->get_lk_max_objects()", "DB_ENV->set_lk_partitions()",
    "DB_ENV->get_lk_partitions()", "DB_ENV->get_flags()",
    "DB_ENV->set_cache_max()", "DB_ENV->get_cache_max()", functions.
  * Support for "DB->get_h_ffactor()", "DB->set_h_nelem()",
    "DB->get_h_nelem()", "DB->get_lorder()", "DB->get_pagesize()",
    "DB->get_re_pad()", "DB->get_re_len()", "DB->get_re_delim()",
    "DB->get_flags()", "DB->get_bt_minkey()" functions.

4.8.1:
  * Support for "DB_ENV->mutex_set_align()" and
    "DB_ENV->mutex_get_align()".
  * Support for "DB_ENV->mutex_set_increment()" and
    "DB_ENV->mutex_get_increment()".
  * Support for "DB_ENV->mutex_set_tas_spins()" and
    "DB_ENV->mutex_get_tas_spins()".
  * Support for "DB_ENV->get_encrypt_flags()".
  * Support for "DB->get_encrypt_flags()".
  * Support for "DB_ENV->get_shm_key()".
  * Support for "DB_ENV->get_cachesize()".
  * Support for "DB->get_cachesize()".
  * Support for "DB_ENV->get_data_dirs()".
  * Testsuite compatibility with recent releases of
    Python 3.0 and 3.1, where cPickle has been removed.
  * Compatibility with development versions of
    Python 2.7 and 3.2 (r76123).
  * For a long time, the API has been accesible via C
    using "_bsddb.api" or "_pybsddb.api". If you are
    using Python 3.2 or up, you acquire access to
    that API via the new Capsule protocol (see "bsddb.h").
    If you use the C API and upgrade to Python 3.2 and up,
    you must update the access code (see "bsddb.h").

4.8.0:
  * Support for Berkeley DB 4.8.
  * Compatibility with Python 3.1.
  * The "DB_XIDDATASIZE" constant has been renamed
    to "DB_GID_SIZE". Update your code!. If linked
    to BDB 4.8, only "DB_GID_SIZE" is defined.
    If linked to previous BDB versions, we keep