@@ -10,7 +10,9 @@
     "DB_ENV->get_lk_max_lockers()", "DB_ENV->set_lk_max_locks()",
     "DB_ENV->get_lk_max_objects()", "DB_ENV->set_lk_partitions()",
     "DB_ENV->get_lk_partitions()", "DB_ENV->get_flags()",
-    "DB_ENV->set_cache_max()", "DB_ENV->get_cache_max()", functions.
+    "DB_ENV->set_cache_max()", "DB_ENV->get_cache_max()",
+    "DB_ENV->set_thread_count()", "DB_ENV->get_thread_count()",
+    functions.
   * Support for "DB->get_h_ffactor()", "DB->set_h_nelem()",
     "DB->get_h_nelem()", "DB->get_lorder()", "DB->get_pagesize()",
     "DB->get_re_pad()", "DB->get_re_len()", "DB->get_re_delim()",
